--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <ul>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>Order of operation for pushing commits to a branch and merging to main: add, commit, pull main, push feature.</li>
         </ul>
       </section>
    
